--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Lori Hammer</h1>
   <p>Ahoy there! Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://media.giphy.com/media/12PA1eI8FBqEBa/giphy.gif" />
 </body>
  
 </html>
