--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dasmoto's Arts & Crafts</title>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+</head>
 <body>
-  <h1>Lori Hammer</h1>
-  <p>Ahoy there! Welcome to my website!</p>
-  <img src="https://media.giphy.com/media/12PA1eI8FBqEBa/giphy.gif" />
+    <div class="header">
+        <h1>Dasmoto's Arts & Crafts</h1>
+        <h4>By: Lori Hammer</h4>
+    </div>
+    <h2 class="green">Brushes</h2>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg">
+    <h3>Hacksaw Brushes</h3>
+    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts Available in different sizes.<span class="bluebold"> Starting at $3.00 / brush.</span></p>
+    <h2 class="red">Frames</h2>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg">
+    <h3>Art Frames (Assorted)</h3>
+    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="bluebold">Starting at $2.00 / frame.</span></p>
+    <h2 class="blue">Paint</h2>
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg">
+    <h3>Clean Finnish Paint</h3>
+    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class=bluebold>Starting at $5.00 / tube.</span></p>
 </body>
- 
 </html>
