--- a/index.html
+++ b/index.html
@@ -1,27 +1,85 @@
+<!-- Design System -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dasmoto's Arts & Crafts</title>
-    <link href="index.css" type="text/css" rel="stylesheet">
-</head>
-<body>
-    <div class="header">
-        <h1>Dasmoto's Arts & Crafts</h1>
-        <h4>By: Lori Hammer</h4>
-    </div>
-    <h2 class="green">Brushes</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/hacksaw.jpeg">
-    <h3>Hacksaw Brushes</h3>
-    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts Available in different sizes.<span class="bluebold"> Starting at $3.00 / brush.</span></p>
-    <h2 class="red">Frames</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/frames.jpeg">
-    <h3>Art Frames (Assorted)</h3>
-    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="bluebold">Starting at $2.00 / frame.</span></p>
-    <h2 class="blue">Paint</h2>
-    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/finnish.jpeg">
-    <h3>Clean Finnish Paint</h3>
-    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class=bluebold>Starting at $5.00 / tube.</span></p>
-</body>
-</html>
+<html>
+    <head>
+        <link href=<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,900;1,500;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+      </head>
+      <body>
+        <!-- Header -->
+        <header>
+          <div class="firstline">
+            <h1>Lori's Design System</h1>
+          </div>
+          <div class="container">
+              <h2>Colors</h2>
+              <div class="color-container">
+                <div class="djg patch">
+                  <p>Dark Jungle Green </p>
+                  <p>#001514</p>
+              </div>
+              <div class="vioblu patch">  
+                <p>Violet Blue </p>
+                <p>#3b429f</p>
+              </div>
+                <div class="polpin patch">
+                    <p>Polished Pine </p>
+                    <p>#63a191</p>
+                </div> 
+                <div class="percra patch">  
+                    <p>Periwinkle Crayola</p>
+                    <p>#C4C6E7</p>
+                </div>
+                <div class="golcra patch">
+                    <p>Gold Crayola</p>
+                    <p>#EDCB96</p>
+                </div>
+              </div>
+         </div>
+          <div class="container">
+            <div class="fonts_box">
+              <h2>Fonts & Text Styles</h2>
+                  <div class="head-font railway">
+                      <p>H1 Headings</p>
+                      <p class="expl_rail">Font family: Railway | Font weight: 900 (Bold) | Font size: 45px</p>
+                  </div>
+                  <div class="head-font rosario2">
+                    <p>H2 Headings</p>
+                    <p class="expl_ros">Font family: Rosario | Font weight: 700 (bold) | Font size: 32px</p>
+                  </div>
+                  <div class="head-font rosario3">
+                    <p>H3 Headings</p>
+                    <p class="expl_ros">Font family: Rosario | Font weight: 700 (bold) | Font size: 22px</p>
+                  </div>
+                  <div class="head-font cantarell">
+                    <p>Paragraph</p>
+                    <p class="expl_can">Font family: Cantarell | Font weight: 400 (normal) | Font size: 16px</p>
+                  </div>
+            </div>
+            <div class="fonts_box">
+              <h2>Example</h2>
+                <h1>Ridiculous Kitchen</h1>
+                <p>This is not your mother's kitchen set-up</p>
+                <ul class="breadcrumb">
+                  <li ><a href="#">Furniture</a> </li>
+                  <li ><a href="#">Glassware</a> </li>
+                  <li ><a href="#">Edibles</a> </li>
+                </ul>
+                <h2 class="rosario2">Preview:</h2>
+                <h3>Furniture</h3>
+                <p><strong>Table Steaks:</strong> Are you ready for your own 3 ft x 5ft pun? Table steaks, a table whose top is in the shape of two T-bone steaks, is sure to impress even your punniest of friends.</p>
+                <h3>Glassware</h3>
+                <p><strong> Glasses:</strong> Imagine this. A tall glass of water, with a the image of your keyboard's "T" key on it. Need I say more?</p>
+                <h3>Edibles</h3>
+                <p><strong>Salt:</strong> Salt distilled from avocadoes. Or is it salt covered in avocadoes? I can't remember.</p>
+                <p><strong>Water:</strong>  mmmm, doesn't this sound super appetizing? mmmm</p>
+            </div>
+          </div>
+          <div class="container">
+              <h2>The End</h2>
+          </div>
+        </header>
