updating ridiculous kitchen items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,900;1,500;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
       </head>
       <body>
@@ -21,25 +21,25 @@
                 <div class="djg patch">
                   <p>Dark Jungle Green </p>
                   <p>#001514</p>
-              </div>
-              <div class="vioblu patch">  
-                <p>Violet Blue </p>
-                <p>#3b429f</p>
-              </div>
+                </div>
+                <div class="vioblu patch">
+                  <p>Violet Blue </p>
+                  <p>#3b429f</p>
+                </div>
                 <div class="polpin patch">
-                    <p>Polished Pine </p>
-                    <p>#63a191</p>
+                  <p>Polished Pine </p>
+                  <p>#63a191</p>
                 </div> 
                 <div class="percra patch">  
-                    <p>Periwinkle Crayola</p>
-                    <p>#C4C6E7</p>
+                  <p>Periwinkle Crayola</p>
+                  <p>#C4C6E7</p>
                 </div>
                 <div class="golcra patch">
-                    <p>Gold Crayola</p>
-                    <p>#EDCB96</p>
+                  <p>Gold Crayola</p>
+                  <p>#EDCB96</p>
                 </div>
               </div>
-         </div>
+          </div>
           <div class="container">
             <div class="fonts_box">
               <h2>Fonts & Text Styles</h2>
@@ -73,10 +73,10 @@
                 <h3>Furniture</h3>
                 <p><strong>Table Steaks:</strong> Are you ready for your own 3 ft x 5ft pun? Table steaks, a table whose top is in the shape of two T-bone steaks, is sure to impress even your punniest of friends.</p>
                 <h3>Glassware</h3>
-                <p><strong> Glasses:</strong> Imagine this. A tall glass of water, with a the image of your keyboard's "T" key on it. Need I say more?</p>
+                <p><strong> T-key glasses:</strong> Imagine this. A tall glass of water, with a the image of your keyboard's "T" key on it. Need I say more?</p>
                 <h3>Edibles</h3>
-                <p><strong>Salt:</strong> Salt distilled from avocadoes. Or is it salt covered in avocadoes? I can't remember.</p>
-                <p><strong>Water:</strong>  mmmm, doesn't this sound super appetizing? mmmm</p>
+                <p><strong>Avocado Salt:</strong> Salt distilled from avocadoes. Or is it salt covered in avocadoes? I can't remember.</p>
+                <p><strong>Chukny Water:</strong>  mmmm, doesn't this sound super appetizing? mmmm</p>
             </div>
           </div>
           <div class="container">
