--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p><strong> T-key glasses:</strong> Imagine this. A tall glass of water, with a the image of your keyboard's "T" key on it. Need I say more?</p>
                 <h3>Edibles</h3>
                 <p><strong>Avocado Salt:</strong> Salt distilled from avocadoes. Or is it salt covered in avocadoes? I can't remember.</p>
-                <p><strong>Chukny Water:</strong>  mmmm, doesn't this sound super appetizing? mmmm</p>
+                <p><strong>Chunky Water:</strong>  mmmm, doesn't this sound super appetizing? mmmm</p>
             </div>
           </div>
           <div class="container">
