--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,900;1,500;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css.index">
+        <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8">
       </head>
       <body>
